@@ -5,6 +5,10 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2023/02/23:
+- TestEngine: Fixed ItemDragAndDrop() to latch references in order to avoid breaking when
+  using "//$FOCUSED" in references, because focus is changed during the call.
+
 2023/02/10:
 - TestEngine: renamed 'ImGuiTestFlags_NoWarmUp' to 'ImGuiTestFlags_NoGuiWarmUp' (rarely used).
 
